[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerPet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/MainGame.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Backgrounds-Sheet.png" type="Texture" id=4]

[node name="MainGame" type="Node2D"]
position = Vector2( 245, 227 )
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="." groups=["GUI"]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UI/Control/HBoxContainer"]
margin_top = 8.0
margin_right = 125.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Name: []"

[node name="Life" type="Label" parent="UI/Control/HBoxContainer"]
margin_left = 129.0
margin_top = 8.0
margin_right = 254.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Life : []"

[node name="Age" type="Label" parent="UI/Control/HBoxContainer"]
margin_left = 258.0
margin_top = 8.0
margin_right = 383.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Age: []"

[node name="Day" type="Label" parent="UI/Control/HBoxContainer"]
margin_left = 387.0
margin_top = 8.0
margin_right = 512.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Day: []"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Control"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetAge" type="Label" parent="UI/Control/HBoxContainer2"]
margin_top = 8.0
margin_right = 512.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Pet age: []"

[node name="Actions" type="VBoxContainer" parent="UI/Control"]
margin_left = 7.0
margin_top = 49.0
margin_right = 207.0
margin_bottom = 349.0
rect_min_size = Vector2( 200, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="UI/Control/Actions"]
margin_right = 200.0
margin_bottom = 20.0
text = "Play"

[node name="Sleep" type="Button" parent="UI/Control/Actions"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "Sleep"

[node name="Food" type="Button" parent="UI/Control/Actions"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
text = "Food"

[node name="Bath" type="Button" parent="UI/Control/Actions"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 92.0
text = "Bath"

[node name="Stats" type="VBoxContainer" parent="UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.0
margin_top = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healt" type="HBoxContainer" parent="UI/Control/Stats"]
margin_right = 126.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="UI/Control/Stats/Healt"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
color = Color( 0.756863, 0.0666667, 0.14902, 1 )

[node name="HealtBar" type="ProgressBar" parent="UI/Control/Stats/Healt"]
margin_left = 40.0
margin_top = 11.0
margin_right = 126.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Happines" type="HBoxContainer" parent="UI/Control/Stats"]
margin_top = 40.0
margin_right = 126.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="UI/Control/Stats/Happines"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
color = Color( 0.109804, 0.564706, 0.721569, 1 )

[node name="HappyBar" type="ProgressBar" parent="UI/Control/Stats/Happines"]
margin_left = 40.0
margin_top = 11.0
margin_right = 126.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Energy" type="HBoxContainer" parent="UI/Control/Stats"]
margin_top = 80.0
margin_right = 126.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="UI/Control/Stats/Energy"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
color = Color( 1, 0.890196, 0, 1 )

[node name="EnergyBar" type="ProgressBar" parent="UI/Control/Stats/Energy"]
margin_left = 40.0
margin_top = 11.0
margin_right = 126.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( -69, -74 )
scale = Vector2( 12, 12 )
texture = ExtResource( 4 )
centered = false
hframes = 2

[node name="PlayerPet" parent="." instance=ExtResource( 2 )]
animation = "pink_baby"
frame = 0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Need" type="Timer" parent="."]
one_shot = true

[node name="WaitAction" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TextureRect" type="Label" parent="."]
margin_left = -163.0
margin_top = -11.0
margin_right = -124.0
margin_bottom = 3.0
text = "food"

[connection signal="pressed" from="UI/Control/Actions/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="UI/Control/Actions/Sleep" to="." method="_on_Sleep_pressed"]
[connection signal="pressed" from="UI/Control/Actions/Food" to="." method="_on_Food_pressed"]
[connection signal="pressed" from="UI/Control/Actions/Bath" to="." method="_on_Bath_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Need" to="." method="_on_Need_timeout"]
[connection signal="timeout" from="WaitAction" to="." method="_on_Wait_action_timeout"]
